--- a/styling/sassStyles.css
+++ b/styling/sassStyles.css
@@ -517,7 +517,7 @@ td {
 }
 
 /*--- MODAL ---*/
-.modal, .secondModal {
+.modal {
   height: 100%;
   width: 100%;
   display: none;
@@ -529,6 +529,23 @@ td {
   overflow-y: scroll;
   background-color: rgba(0, 0, 0, 0.55);
   /*black with low opacity*/
+}
+
+.secondModal {
+  display: none;
+  position: fixed;
+  /* Ensures it stays in place */
+  z-index: 500;
+  /* Make sure it's above other elements */
+  left: 50%;
+  top: 10%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  /* Centers the modal */
+  width: 100%;
+  /* Prevents it from being too wide */
+  background-color: rgba(0, 0, 0, 0.55);
+  padding: 100px 15px;
 }
 
 .modal-btn,
@@ -546,7 +563,8 @@ td {
   font-weight: 600;
 }
 
-.modal-content, .secondModal_content {
+.modal-content,
+.secondModal_content {
   position: relative;
   background-color: #f8f7fc;
   margin: 5px auto;
@@ -561,7 +579,8 @@ td {
   animation-duration: 0.4s;
 }
 
-.modal-body, .secondModal_body {
+.modal-body,
+.secondModal_body {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: auto;
@@ -575,6 +594,13 @@ td {
      object-fit: cover;
   -webkit-transform: scale(1);
           transform: scale(1);
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+
+.secmodal-img {
+  width: 100%;
+  height: 100%;
   -webkit-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
 }
@@ -888,7 +914,8 @@ input[type=submit]:hover {
     float: none;
     display: block;
   }
-  #portfolio-filters .tablinks, #portfolio-filters .designbtn {
+  #portfolio-filters .tablinks,
+  #portfolio-filters .designbtn {
     font-size: 22px;
   }
   .dog {
