Fix modal issue of primary modals not closing
And also add twitter bookmarks project

--- a/styling/sassStyles.css
+++ b/styling/sassStyles.css
@@ -343,6 +343,10 @@ td {
   background-image: url("/assets/art/hole-face/hole-face.png");
 }
 
+#project22 {
+  background-image: url("/assets/code/twitterBookMarks_screenshot.jpeg");
+}
+
 /*-- project square content --*/
 .is-active {
   position: absolute;
