--- a/styling/sassStyles.scss
+++ b/styling/sassStyles.scss
@@ -322,6 +322,9 @@ td {
 #project21 {
     background-image: url('/assets/art/hole-face/hole-face.png');
 }
+#project22 {
+    background-image: url('/assets/code/twitterBookMarks_screenshot.jpeg');
+}
 
 /*-- project square content --*/
 .is-active {
