EverAfter High concept

--- a/styling/sassStyles.scss
+++ b/styling/sassStyles.scss
@@ -325,6 +325,9 @@ td {
 #project22 {
     background-image: url('/assets/code/twitterBookMarks_screenshot.jpeg');
 }
+#project23{
+    background-image: url('/assets/art/fanart/everafterhigh/ravem-outfits.png');
+}
 
 /*-- project square content --*/
 .is-active {
