table for 3 concept

--- a/styling/sassStyles.scss
+++ b/styling/sassStyles.scss
@@ -328,6 +328,9 @@ td {
 #project23{
     background-image: url('/assets/art/fanart/everafterhigh/ravem-outfits.png');
 }
+#project24{
+    background-image:url('/assets/art/tablefor3/wholesome.png');
+}
 
 /*-- project square content --*/
 .is-active {
