--- a/styling/sassStyles.css
+++ b/styling/sassStyles.css
@@ -1,6 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
-
 /*--- UNIVERSAL ---*/
 /*modal body background*/
 /*main body background*/
@@ -12,7 +11,7 @@ body {
   margin: 0;
   padding: 0;
   -webkit-perspective: 900px;
-  perspective: 900px;
+          perspective: 900px;
   font-family: "Montserrat", sans-serif;
   font-optical-sizing: auto;
   font-weight: 500;
@@ -28,7 +27,7 @@ a {
 a:hover {
   text-decoration: underline;
   -webkit-transform: scale(1.05);
-  transform: scale(1.05);
+          transform: scale(1.05);
   font-weight: 600;
   background-color: #bba6de;
 }
@@ -89,7 +88,7 @@ td {
 .darkMode .footer {
   background-image: url('data:image/svg+xml,<svg id="eP6STWEU30G1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 1920 1080" shape-rendering="geometricPrecision" text-rendering="geometricPrecision"><rect width="2425.253232" height="1420.134913" rx="0" ry="0" transform="translate(-269.615181-228.696638)" fill="%23230f44" stroke-width="0"/><path d="M-175.8636,147.16973L168.801889,523.488172L534.569347,147.16973L590.841263,301.9175l109.026839-92.520788Q970.676701,632.51501,974.193695,632.51501t221.570671-144.196786l77.373885-172.332744l228.604661,284.876577l193.434713-432.590358l151.230776,288.393572l119.577822-330.59751q98.475855-246.189635,91.441865-246.189635c-7.03399,0-1948.415111-45.720932-1955.4491-45.720932q-7.033989,0-277.842588,313.012536Z" transform="translate(-3.516995 18.663898)" fill="%23926fcf" stroke-width="3.84"/></svg>');
   -webkit-transform: rotate(180deg);
-  transform: rotate(180deg);
+          transform: rotate(180deg);
 }
 
 .darkMode .modal-btn {
@@ -112,14 +111,14 @@ td {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   background-image: url('data:image/svg+xml,<svg id="eAGeDqr0wZL1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 1920 1080" shape-rendering="geometricPrecision" text-rendering="geometricPrecision"><rect width="2425.253232" height="1420.134913" rx="0" ry="0" transform="translate(-269.615181-228.696638)" fill="%23bba6de" stroke-width="0"/><path d="M-175.8636,147.16973L168.801889,523.488172L534.569347,147.16973L590.841263,301.9175l109.026839-92.520788Q970.676701,632.51501,974.193695,632.51501t221.570671-144.196786l77.373885-172.332744l228.604661,284.876577l193.434713-432.590358l151.230776,288.393572l119.577822-330.59751q98.475855-246.189635,91.441865-246.189635c-7.03399,0-1948.415111-45.720932-1955.4491-45.720932q-7.033989,0-277.842588,313.012536Z" transform="translate(-3.516995 18.663898)" fill="%23ddc9ff" stroke-width="3.84"/></svg>');
 }
 
@@ -162,7 +161,7 @@ td {
 
 .dog:hover {
   -webkit-transform: rotate3d(0, 1, 0, 80deg);
-  transform: rotate3d(0, 1, 0, 80deg);
+          transform: rotate3d(0, 1, 0, 80deg);
 }
 
 .top-banner_name {
@@ -196,20 +195,19 @@ td {
   background-color: #7b4899;
   font-size: 17px;
   -webkit-animation: fadeEffect 0.5s;
-  animation: fadeEffect 0.5s;
+          animation: fadeEffect 0.5s;
 }
 
 .tabcontent {
   display: none;
   -webkit-animation: fadeEffect 1.02s;
-  animation: fadeEffect 1.02s;
+          animation: fadeEffect 1.02s;
 }
 
 @-webkit-keyframes fadeEffect {
   from {
     opacity: 0;
   }
-
   to {
     opacity: 1;
   }
@@ -219,7 +217,6 @@ td {
   from {
     opacity: 0;
   }
-
   to {
     opacity: 1;
   }
@@ -231,12 +228,12 @@ td {
   display: grid;
   margin: 80px 0;
   -ms-grid-columns: auto auto;
-  grid-template-columns: auto auto;
+      grid-template-columns: auto auto;
 }
 
 .pcontainer {
   -webkit-perspective: 1000px;
-  perspective: 1000px;
+          perspective: 1000px;
 }
 
 .card {
@@ -248,15 +245,15 @@ td {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
   background-size: 700px;
   background-position: center;
 }
@@ -351,7 +348,11 @@ td {
 }
 
 #project23 {
-  background-image: url('/assets/art/fanart/everafterhigh/ravem-outfits.png');
+  background-image: url("/assets/art/fanart/everafterhigh/ravem-outfits.png");
+}
+
+#project24 {
+  background-image: url("/assets/art/tablefor3/wholesome.png");
 }
 
 /*-- project square content --*/
@@ -365,18 +366,18 @@ td {
   padding: 40px 80px;
   border-radius: 40px;
   -webkit-transform: scale(0);
-  transform: scale(0);
+          transform: scale(0);
   -webkit-transform: 50 50;
-  transform: 50 50;
+          transform: 50 50;
   -webkit-transition: -webkit-transform 1s 0s;
   transition: -webkit-transform 1s 0s;
   transition: transform 1s 0s;
   transition: transform 1s 0s, -webkit-transform 1s 0s;
 }
 
-.card:hover>.item_content {
+.card:hover > .item_content {
   -webkit-transform: scale(1);
-  transform: scale(1);
+          transform: scale(1);
 }
 
 /*back of card*/
@@ -398,16 +399,16 @@ td {
   display: flex;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-  -ms-flex-direction: row;
-  flex-direction: row;
+      -ms-flex-direction: row;
+          flex-direction: row;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   -ms-flex-line-pack: stretch;
-  align-content: stretch;
+      align-content: stretch;
   margin: auto auto 80px auto;
 }
 
@@ -433,16 +434,16 @@ td {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   -ms-flex-line-pack: stretch;
-  align-content: stretch;
+      align-content: stretch;
   width: 100%;
   margin: auto auto 80px auto;
 }
@@ -464,16 +465,16 @@ td {
   display: flex;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-  -ms-flex-direction: row;
-  flex-direction: row;
+      -ms-flex-direction: row;
+          flex-direction: row;
   -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   -ms-flex-line-pack: stretch;
-  align-content: stretch;
+      align-content: stretch;
 }
 
 .cv_Info {
@@ -493,17 +494,17 @@ td {
   display: flex;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-  -ms-flex-direction: row;
-  flex-direction: row;
+      -ms-flex-direction: row;
+          flex-direction: row;
   -ms-flex-wrap: nowrap;
-  flex-wrap: nowrap;
+      flex-wrap: nowrap;
   -ms-flex-pack: distribute;
-  justify-content: space-around;
+      justify-content: space-around;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   -ms-flex-line-pack: stretch;
-  align-content: stretch;
+      align-content: stretch;
 }
 
 /*--- coursework / interests---*/
@@ -514,17 +515,17 @@ td {
   display: flex;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-  -ms-flex-direction: row;
-  flex-direction: row;
+      -ms-flex-direction: row;
+          flex-direction: row;
   -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
+      flex-wrap: wrap;
   -ms-flex-pack: distribute;
-  justify-content: space-around;
+      justify-content: space-around;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   -ms-flex-line-pack: stretch;
-  align-content: stretch;
+      align-content: stretch;
 }
 
 /*--- MODAL ---*/
@@ -551,7 +552,7 @@ td {
   left: 50%;
   top: 15%;
   -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
   /* Centers the modal */
   width: 100%;
   /* Prevents it from being too wide */
@@ -583,7 +584,7 @@ td {
   border: 1px solid #888;
   width: 80%;
   -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+          box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   -webkit-animation-name: animatetop;
   -webkit-animation-duration: 0.4s;
   animation-name: animatetop;
@@ -595,16 +596,16 @@ td {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: auto;
-  grid-template-columns: auto;
+      grid-template-columns: auto;
 }
 
 .modal-img {
   width: 100%;
   height: 350px;
   -o-object-fit: cover;
-  object-fit: cover;
+     object-fit: cover;
   -webkit-transform: scale(1);
-  transform: scale(1);
+          transform: scale(1);
   -webkit-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
 }
@@ -618,7 +619,7 @@ td {
 
 .modal-img:hover {
   -webkit-transform: scale(1.05);
-  transform: scale(1.05);
+          transform: scale(1.05);
 }
 
 /*modal body captions*/
@@ -658,7 +659,7 @@ textarea {
   border-radius: 4px;
   /* Rounded borders */
   -webkit-box-sizing: border-box;
-  box-sizing: border-box;
+          box-sizing: border-box;
   /* Make sure that padding and width stays in place */
   margin-top: 6px;
   /* Add a top margin */
@@ -723,9 +724,9 @@ input[type=submit]:hover {
   transition: 0.6s ease;
   border-radius: 0 3px 3px 0;
   -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 
 .next {
@@ -775,16 +776,15 @@ input[type=submit]:hover {
 
 .fade {
   -webkit-animation-name: fade;
-  animation-name: fade;
+          animation-name: fade;
   -webkit-animation-duration: 1.5s;
-  animation-duration: 1.5s;
+          animation-duration: 1.5s;
 }
 
 @-webkit-keyframes fade {
   from {
     opacity: .4;
   }
-
   to {
     opacity: 1;
   }
@@ -794,7 +794,6 @@ input[type=submit]:hover {
   from {
     opacity: .4;
   }
-
   to {
     opacity: 1;
   }
@@ -805,7 +804,6 @@ input[type=submit]:hover {
     top: -300px;
     opacity: 0;
   }
-
   to {
     top: 0;
     opacity: 1;
@@ -817,7 +815,6 @@ input[type=submit]:hover {
     top: -300px;
     opacity: 0;
   }
-
   to {
     top: 0;
     opacity: 1;
@@ -864,16 +861,16 @@ input[type=submit]:hover {
   display: flex;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-  -ms-flex-direction: row;
-  flex-direction: row;
+      -ms-flex-direction: row;
+          flex-direction: row;
   -ms-flex-pack: distribute;
-  justify-content: space-around;
+      justify-content: space-around;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   text-align: center;
   -webkit-transform: rotate(180deg);
-  transform: rotate(180deg);
+          transform: rotate(180deg);
 }
 
 .f_btns {
@@ -884,14 +881,14 @@ input[type=submit]:hover {
 
 .f_btns:hover {
   -webkit-transform: scale(1.2);
-  transform: scale(1.2);
+          transform: scale(1.2);
 }
 
 .f_contact,
 .f_morelinks,
 .f_socials {
   -webkit-transform: rotate(180deg);
-  transform: rotate(180deg);
+          transform: rotate(180deg);
 }
 
 #i-insta,
@@ -904,59 +901,49 @@ input[type=submit]:hover {
 /*--- END OF FOOTER ---*/
 /*--- RESPONSIVENESS ---*/
 @media screen and (max-width: 700px) {
-
   /*--- TOP NAV BAR---*/
   .topnav button {
     display: none;
   }
-
   .topnav a.icon {
     float: right;
     display: block;
     font-size: 40px;
     top: 10px;
   }
-
   .topnav.responsive {
     position: relative;
     background-color: #DDC9FF;
     z-index: 1;
   }
-
   .topnav.responsive a.icon {
     position: absolute;
     right: 5px;
     top: 5px;
     z-index: 1;
   }
-
   .topnav.responsive button {
     float: none;
     display: block;
   }
-
   #portfolio-filters .tablinks,
   #portfolio-filters .designbtn {
     font-size: 22px;
   }
-
   .dog {
     width: 200px;
     height: 200px;
     z-index: 0;
   }
-
   .top-banner_name {
     font-size: 22px;
   }
-
   /*--- PROJECT GRID ---*/
   #project-grid {
     margin: 50px 0;
     -ms-grid-columns: auto;
-    grid-template-columns: auto;
+        grid-template-columns: auto;
   }
-
   /*-- modals of projects --*/
   .modal-body {
     display: -webkit-box;
@@ -964,18 +951,16 @@ input[type=submit]:hover {
     display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
-
   /*--- CV GRID ---*/
   .cv-s_tableInfo {
     width: 270px;
     -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
+        flex-wrap: wrap;
     margin: 8px;
   }
-
   /*--- ABOUT GRID ---*/
   .about-container {
     display: -webkit-box;
@@ -983,19 +968,18 @@ input[type=submit]:hover {
     display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
     -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
     -ms-flex-line-pack: stretch;
-    align-content: stretch;
+        align-content: stretch;
     margin: 60px auto 60px auto;
   }
-
   .about-item,
   .about-img {
     display: -webkit-box;
@@ -1003,16 +987,15 @@ input[type=submit]:hover {
     display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
     -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
-
   /*--- FOOTER ---*/
   .footer {
     display: -webkit-box;
@@ -1020,8 +1003,8 @@ input[type=submit]:hover {
     display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
 }
 
@@ -1030,7 +1013,6 @@ input[type=submit]:hover {
     width: 100px;
     height: 100px;
   }
-
   .top-banner_name {
     font-size: 20px;
   }
