--- a/styling/styles.css
+++ b/styling/styles.css
@@ -95,14 +95,49 @@ main {
 }
 
 /*end of project grid*/
-.slideshow-container {
-  max-width: 700px;
-  position: relative;
-  margin: auto;
+
+/*footer*/
+#footer {
+  display: flex;
+  justify-content: center;
+  margin: 0 0;
+  padding: 0 0;
+}
+
+.icons {
+  height: 3rem;
+  width: 3rem;
+}
+
+/*end of footer*/
+
+/*iframes*/
+.iframe-prev {
+  width: 90%;
+  height: 45rem;
+}
+
+/*slide show*/
+* {
+  box-sizing: border-box
 }
 
 .mySlides1 {
   display: none;
+}
+
+.slideshow-img {
+  vertical-align: middle;
+  /* height: 400px; */
+  width: 100%;
+  z-index: 10;
+}
+
+.slideshow-container {
+  max-width: 1000px;
+  /* height: 800px; */
+  position: relative;
+  margin: auto;
 }
 
 .slideshow-prev,
@@ -111,8 +146,14 @@ main {
   position: absolute;
   top: 50%;
   width: auto;
-  margin-top: -22px;
   padding: 16px;
+  margin-top: -22px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
 
 }
 
@@ -123,12 +164,8 @@ main {
 
 .slideshow-prev:hover,
 .slideshow-next:hover {
-  background-color: rgba(0, 0, 0, 0.8);
-}
-
-.slideshow-img {
-  vertical-align: middle;
-  width: 100%;
+  background-color: #f1f1f1;
+  color: black;
 }
 
 .slideshow-text {
@@ -180,31 +217,7 @@ main {
   }
 }
 
-/* Slideshow*/
-
 /* End of Slideshow*/
-
-/*footer*/
-#footer {
-  display: flex;
-  justify-content: center;
-  margin: 0 0;
-  padding: 0 0;
-}
-
-.icons {
-  height: 3rem;
-  width: 3rem;
-}
-
-/*end of footer*/
-
-/*iframes*/
-.iframe-prev {
-  width: 90%;
-  height: 45rem;
-}
-
 /*----- end of universal -----*/
 
 /*----- home page -----*/
