--- a/styling/sassStyles.css
+++ b/styling/sassStyles.css
@@ -711,12 +711,11 @@ input[type=submit]:hover {
 
 .slideshow-img {
   vertical-align: middle;
-  width: 100%;
   z-index: 10;
 }
 
 .slideshow-container {
-  max-width: 1000px;
+  max-width: 80%;
   position: relative;
   margin: auto;
 }
@@ -753,8 +752,8 @@ input[type=submit]:hover {
 }
 
 .slideshow-text {
-  color: #f2f2f2;
   font-size: 15px;
+  margin-top: 30px;
   padding: 8px 12px;
   position: absolute;
   bottom: 8px;
