--- a/styling/sassStyles.scss
+++ b/styling/sassStyles.scss
@@ -634,13 +634,13 @@ input[type=submit]:hover {
 
 .slideshow-img {
     vertical-align: middle;
-    // height: 400px;
-    width: 100%;
+    // height: 50%;
+    // width: 50%;
     z-index: 10;
 }
 
 .slideshow-container {
-    max-width: 1000px;
+    max-width: 80%;
     // height: 800px;
     position: relative;
     margin: auto;
@@ -675,8 +675,9 @@ input[type=submit]:hover {
 }
 
 .slideshow-text {
-    color: #f2f2f2;
+    // color: #000000;
     font-size: 15px;
+    margin-top: 30px;
     padding: 8px 12px;
     position: absolute;
     bottom: 8px;
