art portfolio modal

--- a/styling/sassStyles.scss
+++ b/styling/sassStyles.scss
@@ -335,6 +335,10 @@ td {
     background-image: url('/assets/art/tablefor3/wholesome.png');
 }
 
+#project25{
+    background-image: url('/assets/code/artportfolio-react/homepage-lightmode.jpg');
+}
+
 /*-- project square content --*/
 .is-active {
     position: absolute;
