--- a/styling/sassStyles.css
+++ b/styling/sassStyles.css
@@ -355,6 +355,10 @@ td {
   background-image: url("/assets/art/tablefor3/wholesome.png");
 }
 
+#project25 {
+  background-image: url("/assets/code/artportfolio-react/homepage-lightmode.jpg");
+}
+
 /*-- project square content --*/
 .is-active {
   position: absolute;
