--- a/styling/sassStyles.scss
+++ b/styling/sassStyles.scss
@@ -339,6 +339,10 @@ td {
     background-image: url('/assets/code/artportfolio-react/homepage-lightmode.jpg');
 }
 
+#project26{
+    background-image:url('/assets/code/rooms/home.jpg');
+}
+
 /*-- project square content --*/
 .is-active {
     position: absolute;
