--- a/styling/sassStyles.css
+++ b/styling/sassStyles.css
@@ -199,9 +199,18 @@ td {
 }
 
 .tabcontent {
-  display: none;
   -webkit-animation: fadeEffect 1.02s;
           animation: fadeEffect 1.02s;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 @-webkit-keyframes fadeEffect {
@@ -223,20 +232,19 @@ td {
 }
 
 /*--- PROJECT GRID STUFF ---*/
-#project-grid {
-  display: -ms-grid;
-  display: grid;
-  margin: 80px 0;
-  -ms-grid-columns: auto auto;
-      grid-template-columns: auto auto;
-}
-
+/* #project-grid {
+    display: grid;
+    margin: 80px 0;
+    grid-template-columns: repeat(2, 1fr);
+    // width:50%;
+} */
 .pcontainer {
   -webkit-perspective: 1000px;
           perspective: 1000px;
 }
 
 .card {
+  width: 100%;
   height: 300px;
   text-align: center;
   overflow: hidden;
@@ -254,8 +262,9 @@ td {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  background-size: 700px;
+  background-size: 1500px;
   background-position: center;
+  background-repeat: no-repeat;
 }
 
 /*-- individual project squares*/
@@ -920,7 +929,7 @@ input[type=submit]:hover {
 
 /*--- END OF FOOTER ---*/
 /*--- RESPONSIVENESS ---*/
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 768px) {
   /*--- TOP NAV BAR---*/
   .topnav button {
     display: none;
@@ -959,11 +968,6 @@ input[type=submit]:hover {
     font-size: 22px;
   }
   /*--- PROJECT GRID ---*/
-  #project-grid {
-    margin: 50px 0;
-    -ms-grid-columns: auto;
-        grid-template-columns: auto;
-  }
   /*-- modals of projects --*/
   .modal-body {
     display: -webkit-box;
@@ -1037,9 +1041,6 @@ input[type=submit]:hover {
     font-size: 20px;
   }
   /*-- project grid*/
-  #project-grid {
-    width: 50%;
-  }
   /*-- end of project grid*/
 }
 
