--- a/styling/sassStyles.css
+++ b/styling/sassStyles.css
@@ -372,6 +372,10 @@ td {
   background-image: url("/assets/code/rooms/home.jpg");
 }
 
+#project28 {
+  background-image: url("/assets/art/3dwork/skull1.jpg");
+}
+
 /*-- project square content --*/
 .is-active {
   position: absolute;
