--- a/styling/sassStyles.scss
+++ b/styling/sassStyles.scss
@@ -354,9 +354,14 @@ td {
 #project27 {
     background-image: url('/assets/art/animationstudies/thumbnail.png');
     background-position: 50% 30%;
+}
 
 #project28{
     background-image: url('/assets/art/3dwork/skull1.jpg');
+}
+
+#project29{
+    background-image: url('/assets/code/electron-experiments-bg.jpg');
 }
 
 /*-- project square content --*/
